Changed colors and images. Added Company name.

--- a/jb/index.html
+++ b/jb/index.html
@@ -2,18 +2,17 @@
 <html lang="sv">
 <head>
 <meta charset="utf-8">
-<title>Title here</title>
+<title>Martall Body & Mind</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
 	<div class="background-block">
 	</div>
 	
 	<div class="header">
 		<h1>
-			Företagsnamn
+			Martall Body & Mind
 		</h1>
 		
 		<a href="#default"> Hem</a>
@@ -23,7 +22,7 @@
 	</div>
 
 	<div class="content">
-		<img src="assets/bicycles.jpg" alt="Bicycles">
+		<img src="assets/martall2.jpg" alt="Martall">
 		<h1>
 			Testrubrik
 		</h1>
@@ -32,7 +31,7 @@
 			Testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf.
 		</p>
 		
-		<img src="assets/foggy_ride.jpg" alt="Foggy ride">
+		<img src="assets/bicycles2.jpg" alt="Bicycles">
 		
 		<h1>
 			Annan testrubrik
@@ -42,7 +41,7 @@
 			Testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf.
 		</p>
 		
-		<img src="assets/flowers.jpg" alt="Flowers">
+		<img src="assets/foggy_ride2.jpg" alt="Foggy ride">
 		
 	</div>
 
