Added services, contact, and about pages.

--- a/jb/index.html
+++ b/jb/index.html
@@ -15,10 +15,10 @@
 			Martall Body & Mind
 		</h1>
 		
-		<a href="#default"> Hem</a>
-		<a href="#services"> Tjänster</a>
-		<a href="#contact"> Kontakt</a>
-		<a href="#about"> Om</a>
+		<a href="index.html"> Hem</a>
+		<a href="services.html"> Tjänster</a>
+		<a href="contact.html"> Kontakt</a>
+		<a href="about.html"> Om</a>
 	</div>
 
 	<div class="content">
