--- a/jb/index.html
+++ b/jb/index.html
@@ -22,7 +22,16 @@
 	</div>
 
 	<div class="content">
+		<h1>
+			Testrubrik
+		</h1>
+		
+		<p>
+			Testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf.
+		</p>
+		
 		<img src="assets/martall2.jpg" alt="Martall">
+		
 		<h1>
 			Testrubrik
 		</h1>
