--- a/jb/index.html
+++ b/jb/index.html
@@ -15,7 +15,7 @@
 			Martall Body & Mind
 		</h1>
 		
-		<a href="index.html"> Hem</a>
+		<a href="./"> Hem</a>
 		<a href="services.html"> Tjänster</a>
 		<a href="contact.html"> Kontakt</a>
 		<a href="about.html"> Om</a>
@@ -25,9 +25,8 @@
 		<h1>
 			Testrubrik
 		</h1>
-		
 		<p>
-			Testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf.
+			Testparagraf
 		</p>
 		
 		<img src="assets/martall2.jpg" alt="Martall">
@@ -35,7 +34,6 @@
 		<h1>
 			Testrubrik
 		</h1>
-		
 		<p>
 			Testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf.
 		</p>
@@ -45,12 +43,10 @@
 		<h1>
 			Annan testrubrik
 		</h1>
-		
 		<p>
 			Testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf testparagraf.
 		</p>
 		
-		<img src="assets/foggy_ride2.jpg" alt="Foggy ride">
 		
 	</div>
 
