--- a/jb/about.html
+++ b/jb/about.html
@@ -15,7 +15,7 @@
 			Martall Body & Mind - Om
 		</h1>
 		
-		<a href="index.html"> Hem</a>
+		<a href="./"> Hem</a>
 		<a href="services.html"> Tjänster</a>
 		<a href="contact.html"> Kontakt</a>
 		<a href="about.html"> Om</a>
