Made experimental site the actual landing page.

--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
 <meta charset="utf-8">
-<title>Portfolio</title>
+<title>Gustav Björk | Links</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
 	
 	<div class="header">
 		<h1>
-			Portfolio
+			Links
 		</h1>
 		
 		<a href="./"> About me</a>
