--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
 <meta charset="utf-8">
-<title>Martall Body & Mind</title>
+<title>Gustav Björk | About</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
