Moved some styling to css file

--- a/AmongUsRandomizer/index.html
+++ b/AmongUsRandomizer/index.html
@@ -29,8 +29,8 @@
 				<button class="backgroundButton" id="halloweenerBtn" style="background-image: url(Assets/Halloweener.png)"></button>
 			</div>
             <div id="voting" style="background-image: url(Assets/ImpostorQuestion.png);">
-                <button class="votingButton" id="yesBtn" style="width: 10%; position: absolute; left: 15%; background-image: url(Assets/VoteYes.png);"></button>
-                <button class="votingButton" id="noBtn" style="width: 10%; position: absolute; left: 75%; background-image: url(Assets/VoteNo.png);"></button>
+                <button class="votingButton" id="yesBtn" style="left: 15%; background-image: url(Assets/VoteYes.png);"></button>
+                <button class="votingButton" id="noBtn" style="left: 75%; background-image: url(Assets/VoteNo.png);"></button>
             </div>
 			<div id="wasImpostor" >
 				<button class="backgroundButton" id="wasImpostorBtn" style="background-image: url(Assets/WasImpostor.png)"></button>
