--- a/AmongUsRandomizer/index.html
+++ b/AmongUsRandomizer/index.html
@@ -34,10 +34,10 @@
             </div>
 			<div id="wasImpostor" >
 				<button class="backgroundButton" id="wasImpostorBtn" style="background-image: url(Assets/WasImpostor.png)"></button>
-			</div>;
+			</div>
 			<div id="wasNotImpostor">
 				<button class="backgroundButton" id="wasNotImpostorBtn" style="background-image: url(Assets/WasNotImpostor.png)"></button>
-			</div>;
+			</div>
 
 			<div id="correct">
 				<button class="backgroundButton" id="correctBtn" style="background-image: url(Assets/Victory.png);"></button>
