--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,24 @@
         <img src="./assets/SPASM_Showcased_1.jpg" style = "width: 40%">
         <img src="./assets/SPASM_Showcased_2.jpg" style = "width: 40%">
         <hr>
+
+	<h1>Ludum Dare 54 - Ghost Gambit</h1>
+		<p>
+			Our by far most advanced submission. We started this jam with a more developed engine than we have had previously, with a built-in editor ready, we felt confident that we could get lots done! 
+			And we really did, but we still didn’t quite reach our original game idea. Taking on netcode, bots and an idea including multiple rounds with eliminations was a bit too much.
+			
+			In our original idea, there were supposed to be fewer graves available than the number of players, and when the last grave was claimed, the remaining players would be knocked out. 
+			This would continue until only one player is the only one standing. Since we could not complete this mechanic, we settled for allowing all players to claim graves and added a time summary for how long it took for every player to claim a grave instead.
+
+			Check out the entry <a href=https://ldjam.com/events/ludum-dare/54/ghost-gambit>here</a> or play the game directly <a href=https://updated.rlyeh.nu/>here!</a>
+		</p>
+
+		<img src="https://static.jam.host/raw/5af/84/z/5d601.png" style="width: 40%;">
+		<img src="https://static.jam.host/raw/5af/84/z/5da66.png" style="width: 40%;">
+		<img src="https://static.jam.host/raw/5af/84/z/5da7e.png" style="width: 40%;">
+		<img src="https://static.jam.host/raw/5af/84/z/5d661.png" style="width: 40%;">
+		
+	<hr>
 	
 	<h1>Ludum Dare 53 - News Flash!</h1>
         <p>
@@ -72,8 +90,8 @@
             Check out the entry <a href=https://ldjam.com/events/ludum-dare/53/news-flash>here</a> or play the game directly <a href=https://ldjam53.rlyeh.nu/>here!</a>
         </p> 
 	
-	<img src="https://static.jam.host/raw/fd1/f3/z/5927a.png" style="width: 45%;">
-	<img src="https://static.jam.host/raw/fd1/f3/z/59226.png" style="width: 45%;">
+	<img src="https://static.jam.host/raw/fd1/f3/z/5927a.png" style="width: 40%;">
+	<img src="https://static.jam.host/raw/fd1/f3/z/59226.png" style="width: 40%;">
 	<hr>
 	
         <h1>Ludum Dare 51 - Decachronomorphia</h1>
