Update welcome page.

--- a/index.html
+++ b/index.html
@@ -22,15 +22,23 @@
 
 	<div class="content">
 		<h1>
-			Introduction
+			Hello!
 		</h1>
 		<p>
 			Welcome to my portfolio website!<br><br>
 			My name is Gustav and I have a Master of Science in Engineering degree in Game and Software Engineering from Blekinge Tekniska Högskola (BTH), Sweden.
-			I am passionate about game development and have an especially big interest in game physics.
+			I am passionate about game development and have a big interest in everything game engine related. 
+		</p>
+
+		<h1>
+			My work
+		</h1>
+		<p>
+			I've been a part of designing and developing the rendering framework used for the displays in SAAB's JAS 39 Gripen E/F fighter jets, and been a team lead for developing mobile forensic applications targeting Android devices.<br>
+			On this website, you can see the projects I have worked on outside of working hours, such as game projects, school projects, and game jam submissions. Enjoy!
 		</p>
 		
-		<img src="./assets/Jag.jpg" alt="Me">
+		<img src="./assets/Jag2.jpg" alt="Me">
 		
 		
 	</div>
