--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
         <p>
             Iterating on the previous WebGL engine by making it much more capable of proper 3D rendering, we got fully immersed into the 3D world, making a first person news paper delivery game. Really happy with how it turned out! The scope was big enough that we felt happy with the result, but simple enough to actually get it working properly in the 72 hours we had. 
             
-            Check out the entry <a href=https://ldjam.com/events/ludum-dare/53/news-flash>here</a> or play the game directly <a href=https://ldjam53.rlyeh.nu/>here!</a>
+            Check out the entry <a href=https://ldjam.com/events/ludum-dare/53/news-flash>here</a> or play the game directly <a href=https://bjorkgustav.se/News-Flash/>here!</a>
         </p> 
         
         <img src="https://static.jam.host/raw/fd1/f3/z/5927a.png" style="width: 40%;">
