--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
 	    <a href=https://github.com/Praccen/MrFuse>Repo</a>
         </p>
 
-        <img src="https://static.jam.vg/raw/b7f/f3/z/4b35f.png">
+        <img src="https://static.jam.host/raw/b7f/f3/z/4b35f.png">
         <hr>
         
         <h1>Ludum Dare 49 - Un-stabled (2021) </h1>
@@ -148,7 +148,7 @@
 	    <a href=https://github.com/Praccen/LudumDare49>Repo</a>
         </p>
 
-        <img src="https://static.jam.vg/raw/fd1/f3/z/45fee.png">
+        <img src="https://static.jam.host/raw/fd1/f3/z/45fee.png">
         <hr>
 
         <h1>K2A web-based game (2019) </h1>
