--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,8 @@
 	    <a href=https://github.com/Praccen/NightShift>Repo</a>
         </p>
 
-        <img src="./assets/NightShift1.png" style="width: 40%;">
-        <img src="./assets/NightShift2.png" style="width: 40%;">
+        <img src="./assets/NightShift1.png">
+        <img src="./assets/NightShift2.png">
         <hr>
 
         <h1>Ludum Dare 54 - Ghost Gambit (2023) </h1>
