--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 		</h1>
 		<p>
 			I've been a part of designing and developing the rendering framework used for the displays in SAAB's JAS 39 Gripen E/F fighter jets, and been a team lead for developing mobile forensic applications targeting Android devices.<br>
-			On this website, you can see the projects I have worked on outside of working hours, such as game projects, school projects, and game jam submissions. Enjoy!
+			On this website, you can see the projects I have worked on outside of working hours, such as game projects, school projects, and game jam submissions. Enjoy!<br>
+			<a href="portfolio.html"> Go to portfolio</a>
 		</p>
 		
 		<img src="./assets/Jag2.jpg" alt="Me">
