--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 			On this website, you can see the projects I have worked on outside of working hours, such as game projects, school projects, and game jam submissions. Enjoy!<br>
 			<a href="portfolio.html"> Go to portfolio</a>
 		</p>
-		
-		<img src="./assets/Jag2.jpg" alt="Me">
+
+		<img src="./assets/IMG_2214.jpg" alt="Me">
+		<img src="./assets/Jag2.jpg" alt="Me revieving an award for bold decision of the year at the MSAB kick-off">
 		
 		
 	</div>
