--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<div class="content">
-		<img src="./assets/IMG_2214.jpg" alt="Me">
+		<img src="./assets/Jag3.jpg" alt="Me">
 		<h1>
 			Hello!
 		</h1>
