--- a/ScavengerHuntDev/index.html
+++ b/ScavengerHuntDev/index.html
@@ -3,6 +3,7 @@
 	<head>
         <title>Scavenger hunt!</title>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com"	crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Macondo+Swash+Caps&display=swap" rel="stylesheet">
@@ -10,6 +11,6 @@
 	</head>
 
 	<body>
-		<script type="module" src="./ScavengerHunt.esm.js"></script>
+		<script type="module" src="./dist/ScavengerHunt.esm.js"></script>
 	</body>
 </html>
