--- a/ScavengerHunt/index.html
+++ b/ScavengerHunt/index.html
@@ -3,6 +3,7 @@
 	<head>
         <title>Scavenger hunt!</title>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com"	crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Macondo+Swash+Caps&display=swap" rel="stylesheet">
