--- a/ScavengerHuntDev/index.html
+++ b/ScavengerHuntDev/index.html
@@ -11,6 +11,6 @@
 	</head>
 
 	<body>
-		<script type="module" src="./ScavengerHunt.esm.js?updated=2"></script>
+		<script type="module" src="./ScavengerHunt.esm.js"></script>
 	</body>
 </html>
