--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,18 @@
         <img src="./assets/SPASM_Showcased_2.jpg" style = "width: 40%">
         <hr>
 
+        <h1>Sneakpeaks of works in progress (Ongoing)</h1>
+        <img src="./assets/WIP/captureScreen.png">
+        <img src="./assets/WIP/captureScreen2.png">
+        <img src="./assets/WIP/captureScreen3.png">
+        <iframe style="display: block; margin: auto" width="90%" height="500px"
+        src="./assets/WIP/Video.mp4" 
+        frameborder="0"
+        allowfullscreen>
+        </iframe>
+
+        <hr>
+
         <h1>Mini Jam 158: Night Shift (2024)</h1>
         <p>
             Volumetric lighting, a scary procedurally animated spider and box delivery. What more could one want?<br>
