--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
                 allowfullscreen>
             </iframe>
 
-            <h2>Render scaling and blurring</h2>
+            <h2>Volumetric render scaling and blurring</h2>
             <iframe style="display: block; margin: auto" width="90%" height="500px"
                 src="./assets/WIP/VolmetricScaleAndBlur.mp4" 
                 frameborder="0"
