--- a/portfolio.html
+++ b/portfolio.html
@@ -116,6 +116,24 @@
         </div>
         
         <div id = "gamejams" style="scroll-margin-block-start: 150px;">
+			<h1>Ludum Dare 56: Cheddar Chase (2024)</h1>
+	    	<p>
+	        	During the 72-hour game jam, I focused on enhancing my WebGL game engine by implementing skeletal animations with glTF file format support. 
+				This allowed us to create fluid character movements for our stealthy heist game, where players control a mouse sneaking through sewers to steal cheese from rats. 
+				We leveraged my previous work on procedural map generation and volumetric lighting to add depth and atmosphere to the game. 
+				Additionally, I worked on optimization to support numerous point lights with shadows, ensuring the game ran smoothly despite its complex lighting and animations.
+			</p>
+
+			<p>
+				Check out the entry and play the game <a href=https://ldjam.com/events/ludum-dare/56/cheddar-chase>here</a>!<br>
+			<a href=https://github.com/praccen/ldjam56>Repo</a>
+			</p>
+
+			<img src="https://static.jam.host/raw/b7f/f3/z/67a1f.png">
+			<img src="https://static.jam.host/raw/b7f/f3/z/67a20.png">
+            <img src="https://static.jam.host/raw/b7f/f3/z/67a22.png">
+			<hr>
+			
             <h1>Mini Jam 158: Night Shift (2024)</h1>
             <p>
                 Volumetric lighting, a scary procedurally animated spider and box delivery. What more could one want?<br>
@@ -124,7 +142,7 @@
 
             <p>
                 Check out the entry and play the game <a href=https://miraz12.itch.io/night-shift>here</a>!<br>
-            <a href=https://github.com/Praccen/NightShift>Repo</a>
+			<a href=https://github.com/Praccen/NightShift>Repo</a>
             </p>
 
             <img src="./assets/NightShift1.png">
