Selfhosted pictures for CheddarChase

--- a/portfolio.html
+++ b/portfolio.html
@@ -129,9 +129,10 @@
 			<a href=https://github.com/praccen/ldjam56>Repo</a>
 			</p>
 
-			<img src="https://static.jam.host/raw/b7f/f3/z/67a1f.png">
-			<img src="https://static.jam.host/raw/b7f/f3/z/67a20.png">
-            <img src="https://static.jam.host/raw/b7f/f3/z/67a22.png">
+			<img src="./assets/CheddarChase/CheddarChase0.png">
+			<img src="./assets/CheddarChase/CheddarChase1.png">
+			<img src="./assets/CheddarChase/CheddarChase2.png">
+            <img src="./assets/CheddarChase/CheddarChase3.png">
 			<hr>
 			
             <h1>Mini Jam 158: Night Shift (2024)</h1>
