Update Cheddar Chase pictures

--- a/portfolio.html
+++ b/portfolio.html
@@ -133,6 +133,8 @@
 			<img src="./assets/CheddarChase/CheddarChase1.png">
 			<img src="./assets/CheddarChase/CheddarChase2.png">
             <img src="./assets/CheddarChase/CheddarChase3.png">
+            <img src="./assets/CheddarChase/CheddarChase4.png">
+            <img src="./assets/CheddarChase/CheddarChase5.png">
 			<hr>
 			
             <h1>Mini Jam 158: Night Shift (2024)</h1>
