Years for portfolio sections

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,11 +25,11 @@
             <b>I program games and stuff.</b><br>
             - Here are some of my projects:<br><br>
 
-            <a href=#school>School projects</a><br>
+            <a href=#school>School projects (2018-2019)</a><br>
             <a href=#ongoing>Ongoing projects</a><br>
-            <a href=#gamejams>Game jam submissions</a><br>
-            <a href=#freelance>Freelance work</a><br>
-            <a href=#masterthesis>Master thesis</a><br>
+            <a href=#gamejams>Game jam submissions (2021-2024)</a><br>
+            <a href=#freelance>Freelance work (2019)</a><br>
+            <a href=#masterthesis>Master thesis (2020)</a><br>
         </p>
         <hr>
         
