--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
 
             <h1>SPASM (2018) </h1>
             <p>
-                SPASM is a 2,5D arena shooter made by me and 4 other students during the small game project at BTH and is the result of 8 weeks of development from scratch. I contributed with creating models, animations, map building, block appearance and connections, score visualizations, and some varius gameplay related features.
+                SPASM is a 2,5D arena shooter made by me and 4 other students during the small game project at BTH and is the result of 8 weeks of development from scratch. I contributed with creating models, animations, map building, block appearance and connections, score visualizations, and some various gameplay related features.
 
                 The repo is available <a href="https://github.com/Piratkopia13/DV1504_SPASM">here!</a>
             </p>
@@ -139,7 +139,7 @@
 			
             <h1>Mini Jam 158: Night Shift (2024)</h1>
             <p>
-                Volumetric lighting, a scary procedurally animated spider and box delivery. What more could one want?<br>
+                Volumetric lighting, a scary procedurally animated spider, and box delivery. What more could one want?<br>
                 Made by just me and one other developer, in 72 hours for Mini Jam 158. With my WebGL engine as a base.
             </p>
 
@@ -227,7 +227,7 @@
         <div id="freelance">
             <h1>K2A web-based game (2019) </h1>
             <p>
-                Written in HTML, CSS, and Javascript with WebGL as a freelance project ordered by the PR-agency <a href=http://redgertcomms.com/>Redgert Comms</a> as a way to market the stock exchange listing of the company <a href=https://www.k2a.se>K2A</a>.<br>
+                Written in HTML, CSS, and Javascript with WebGL as a freelance project ordered by the PR agency <a href=http://redgertcomms.com/>Redgert Comms</a> as a way to market the stock exchange listing of the company <a href=https://www.k2a.se>K2A</a>.<br>
 
                 <img src="./K2A/Assets/Textures/Characters/Johan/Johan_K2A.png" style="width: 10%; image-rendering: pixelated;"> The game can be played <a href=./K2A>here!</a>
             </p>
@@ -237,8 +237,8 @@
         <div id = "masterthesis" style="scroll-margin-block-start: 150px;">
             <h1>Master thesis on collision detection using neural networks (2020) </h1>
             <p>
-                Check out my masters thesis which I conducted together with my classmate <a href=https://pirat.dev>Alexander Wester</a>. 
-                We experimented with using Neural Networks to detect collisions in 3D environments and comparing it to Separating Axis Theorem. 
+                Check out my master's thesis which I conducted together with my classmate <a href=https://pirat.dev>Alexander Wester</a>. 
+                We experimented with using Neural Networks to detect collisions in 3D environments and comparing it to the Separating Axis Theorem. 
                 We were able to achieve intersection testing 15.6 times as fast as when using Separating Axis Theorem.<br>
                 <br>
                 <a href=http://urn.kb.se/resolve?urn=urn:nbn:se:bth-19623>Link to publication</a>
