--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
 	</div>
 
 	<div class="content">
+		<img src="./assets/WIP/TeaserImage.png">
         <p>
             <b>I program games and stuff.</b><br>
             - Here are some of my projects:<br><br>
