--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,8 @@
             <h1>Works in progress (Ongoing)</h1>
             <p>
                 I am continually working on my WebGL engine, improving it as I go.<br><br>
-                I find it easiest to work on features by starting a game project and adding whatever is needed. Currently, I am working on a procedurally generated dungeon crawler.
-				Everything is written from scratch by me - rendering, physics, even the obj and glTF loaders.
+                I find it easiest to work on features by starting a game project and adding whatever is needed. Currently, I am working on a procedurally generated dungeon crawler.<br>
+				Everything is written from scratch by me - rendering, physics, even the obj and glTF loaders.<br><br>
 	    	    Enjoy some gameplay!
 				<iframe style="display: block; margin: auto" width="100%" height="500px"
 	        		src="./assets/WIP/Gameplay.mp4" 
