--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                 I find it easiest to work on features by starting a game project and adding whatever is needed. Currently, I am working on a procedurally generated dungeon crawler.<br>
 				Everything is written from scratch by me - rendering, physics, even the obj and glTF loaders.<br><br>
 	    	    Enjoy some gameplay!
-				<iframe style="display: block; margin: auto" width="100%"
+				<iframe style="display: block; margin: auto" width="100%" height="100%"
 	        		src="./assets/WIP/Gameplay.mp4" 
 	        		frameborder="0"
 	        		allowfullscreen>
