--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,6 @@
 </head>
 
 <body>
-	<div class="background-block">
-	</div>
-	
 	<div class="header">
 		<h1>
 			Portfolio
@@ -20,8 +17,14 @@
 		<a href="links.html"> Links</a>
 	</div>
 
+    <a href=#ongoing>
+    <div class="teaserarea">
+        <img src="./assets/WIP/TeaserImage.png" class="bg-image-blur" style="z-index: -10; height:500px; object-fit: cover;">
+        <img src="./assets/WIP/TeaserImage.png" class="bg-image" alt="Me" style="z-index: -9; position: relative; height:500px; object-fit: cover;">
+    </div>
+    </a>
+
 	<div class="content">
-		<a href=#ongoing><img src="./assets/WIP/TeaserImage.png"></a>
         <p>
             <b>I program games and stuff.</b><br>
             - Here are some of my projects:<br><br>
@@ -69,8 +72,8 @@
                 So much so that we have been recommended by BTH representatives to release the game on a platform like Steam. 
                 We would like to add online multiplayer support before releasing it, so let's see if it happens in the future.
             </p>
-            <img src="./assets/SPASM_Showcased_1.jpg" style = "width: 40%">
-            <img src="./assets/SPASM_Showcased_2.jpg" style = "width: 40%">
+            <img src="./assets/SPASM_Showcased_1.jpg" style = "width: 49%; margin: 0px;">
+            <img src="./assets/SPASM_Showcased_2.jpg" style = "width: 49%; margin: 0px;">
             <hr>
         </div>
 
@@ -81,11 +84,14 @@
                 I find it easiest to work on features by starting a game project and adding whatever is needed. Currently, I am working on a procedurally generated dungeon crawler.<br>
 				Everything is written from scratch by me - rendering, physics, even the obj and glTF loaders.<br><br>
 	    	    Enjoy some gameplay!
-				<iframe style="display: block; margin: auto" width="100%" height="500px"
+                <div class="container">
+				<iframe
+                    class="video"
 	        		src="./assets/WIP/Gameplay.mp4" 
 	        		frameborder="0"
 	        		allowfullscreen>
 	            </iframe>
+                </div>
             </p>
     
             <hr>
