Blurred border of teaser image on start page.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
 			<a href="portfolio.html"> Go to portfolio</a>
 		</p>
 		
-		<img src="./assets/WIP/TeaserImage.png" alt="One of my ongoing game projects">
+		<a href=./portfolio>
+			<div style="position: relative;">
+				<img src="./assets/WIP/TeaserImage.png" class="bg-image-blur" style="z-index: -10;">
+				<img src="./assets/WIP/TeaserImage.png" class="bg-image" alt="One of my ongoing game projects" style="z-index: -9; position: relative;">
+			</div>
+		</a>
 	</div>
 
 </body>
