--- a/portfolio.html
+++ b/portfolio.html
@@ -98,6 +98,23 @@
         </div>
         
         <div id = "gamejams" style="scroll-margin-block-start: 150px;">
+			<h1>Ludum Dare 58: Arkeolog (2025)</h1>
+			<p>
+	        	With the theme being collector, our minds jumped to the childhood dream of becoming Indiana Jones. Searching for artifacts in a hidden temple, while narrowly avoiding traps and spirits.<br>
+				I'm especially proud of how well this game runs. After adding custom culling options to the engine and making sure that everything is enabled on a per floor basis in this procedurally generated level, it runs pretty well on any device I've tried it on. 
+			</p>
+
+			<p>
+				Check out the entry and play the game <a href=https://ldjam.com/events/ludum-dare/58/arkeolog>here</a>!<br>
+			<a href=https://github.com/Praccen/ldjam58>Repo</a>
+			</p>
+
+			<img src="./assets/Arkeolog/1.png">
+			<img src="./assets/Arkeolog/2.png">
+			<img src="./assets/Arkeolog/3.png">
+			<hr>
+
+			
 			<h1>Ludum Dare 56: Cheddar Chase (2024)</h1>
 	    	<p>
 	        	During the 72-hour game jam, I focused on enhancing my WebGL game engine by implementing skeletal animations with glTF file format support. 
